[test] test ncurses color system

--- a/Tetris/CMakeLists.txt
+++ b/Tetris/CMakeLists.txt
@@ -13,3 +13,5 @@ endfunction()
 
 compile_it(Tetris src/main.cpp)
 compile_it(utf8 src/utf8.cpp)
+compile_it(colortest src/colortest.cpp)
+compile_it(show_colors src/show_colors.cpp)
