--- a/Tetris/CMakeLists.txt
+++ b/Tetris/CMakeLists.txt
@@ -17,3 +17,7 @@ compile_it(colortest src/colortest.cpp)
 compile_it(colortest2 src/colortest2.cpp)
 compile_it(colortest3 src/colortest3.cpp)
 compile_it(show_colors src/show_colors.cpp)
+compile_it(windowtest src/windowtest.cpp)
+compile_it(square src/square.cpp)
+compile_it(console_codes src/console_codes.cpp)
+compile_it(dbg_no_refresh src/dbg_no_refresh.cpp)
