--- a/Tetris/CMakeLists.txt
+++ b/Tetris/CMakeLists.txt
@@ -21,3 +21,4 @@ compile_it(windowtest src/windowtest.cpp)
 compile_it(square src/square.cpp)
 compile_it(console_codes src/console_codes.cpp)
 compile_it(dbg_no_refresh src/dbg_no_refresh.cpp)
+compile_it(add_color src/add_color.cpp)
